--- a/src/components/pipelinep.css
+++ b/src/components/pipelinep.css
@@ -53,15 +53,7 @@
     position: relative;
   }
    */
-  .pipeline-right-section {
-    width: 25%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    padding: 20px 20px 104px 20px;
-  }
-  
+
   .pipeline-faded-tilt-image {
     width: 25%;
     height: 80%;
@@ -70,12 +62,11 @@
     top: 119px;
   }
   .pipeline-middle-section {
-    width: 50%;
-    height: 100vh;
+    width: 75%;
+    height: 100%;
     display: flex;
     flex-direction: column; /* Enable column layout */
-    justify-content: center;
-    align-items: center;
+   
     padding: 20px;
     position: relative;
 }
@@ -84,45 +75,51 @@
     width: 100%;
     height: auto;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    /* margin-bottom: 200px; */
+    /* margin-bottom: 40px; */
     position: absolute;
-    top: -5vh; 
+    top: 1%; 
     z-index: 5;
 }
 
 .sec-svg{
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
-    /* margin-bottom: 100px; */
+    margin-bottom: 40px;
     position: absolute;
-    top: 15vh; 
+    top: 20%; 
+    left: 15%;
+    z-index: 3;
 }
 .third-svg{
 
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* margin-bottom: 10px; */
-    position: absolute;
-    top: 30vh; 
+    margin-bottom: 40px;
+    position: relative;
+    /* top: 22%;  */
+    z-index: 2;
+    transform: none;
+
 }
 
 .bottom-svg{
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* margin-bottom: -100px; */
-    position: absolute;
-    top: 55%; 
+    margin-bottom: 0;
+    position: relative;
+    /* top: 28%;  */
+    z-index: 1;
 }   
 
   .pipeline-description-text {
